--- a/demo/ChangeLog
+++ b/demo/ChangeLog
@@ -1,3 +1,7 @@
+2010-02-14 Daniel Bruessler  <mail@danielbruessler.de>
+
+	* Added the first version of manual.sxw, for diff: manual.txt
+	
 2009-11-20 Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Added method to change datababase character set
