Added the previous generated realurl_autoconf.php which now includes configuration for tt_news. Fixes #6905.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@31802 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/ChangeLog
+++ b/demo/ChangeLog
@@ -1,3 +1,11 @@
+2010-03-31 Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Added the generated realurl_autoconf.php which now includes configuration for tt_news. Fixes #6905.
+
+2010-03-21 Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Removed trailing slash in the URL configuration. Addresses issue #5465.
+
 2010-02-14 Daniel Bruessler  <mail@danielbruessler.de>
 
 	* Added the first version of manual.sxw, for diff: manual.txt
