Made the hooks compatible with the new install tool. Addresses #7125. Some tweaking needed.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@32008 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/ChangeLog
+++ b/demo/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-07 Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Made the hooks compatible with the new install tool. Addresses #7125. Some tweaking needed.
+ 
 2010-03-31 Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Added the generated realurl_autoconf.php which now includes configuration for tt_news. Fixes #6905.
