* Set the correct number of additional steps. * Changed the handling of step '5' in order not to skip a step.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@32251 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/ChangeLog
+++ b/demo/ChangeLog
@@ -1,3 +1,8 @@
+2010-04-15 Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Set the correct number of additional steps.
+	* Changed the handling of step '5' in order not to skip a step.
+
 2010-04-07 Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Made the hooks compatible with the new install tool. Addresses #7125. Some tweaking needed.
