Bugfix: Before perfoming GD functions, check if GD is available. Fixes #7384
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/demo/trunk@32404 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/demo/ChangeLog
+++ b/demo/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-20 Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Bugfix: Before perfoming GD functions, check if GD is available. Fixes #7384
+
 2010-04-15 Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Set the correct number of additional steps.
