--- a/demo/ChangeLog
+++ b/demo/ChangeLog
@@ -1,3 +1,7 @@
+2010-04-23 Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Changed the name of the CSS classes as they where changed in the CSS of the install extension. Fixes #7441.
+
 2010-04-20 Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Bugfix: Before perfoming GD functions, check if GD is available. Fixes #7384
