Implemented automatic installation of required extensions. Fixes #7293.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@32821 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-05-01 Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Implemented automatic installation of required extensions. Fixes #7293.
+
 2010-04-28 Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Added images which are used in the new CSS and made the paths relative.
