Changed the usage of t3lib_div::GPvar() to t3lib_div::_GP() due to deprecation.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@32823 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,6 +1,7 @@
 2010-05-01 Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Implemented automatic installation of required extensions. Fixes #7293.
+	* Changed the usage of t3lib_div::GPvar() to t3lib_div::_GP() due to deprecation.
 
 2010-04-28 Peter Beernink  <p.beernink@drecomm.nl>
 
