--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,9 @@
+2010-06-15  Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Fixed bug #8197: Password of fe_users is not updated anymore
+	* Updated RealURL extension to 1.9.3
+	* Updated Template Auto-parser extension to 0.1.2
+
 2010-06-13  Michiel Roos  <michiel@netcreators.com>
 
 	* Change: updated changelog
