Updated tt_news extension to 3.0.1
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@34356 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -3,6 +3,7 @@
 	* Fixed bug #8197: Password of fe_users is not updated anymore
 	* Updated RealURL extension to 1.9.3
 	* Updated Template Auto-parser extension to 0.1.2
+	* Updated tt_news extension to 3.0.1
 
 2010-06-13  Michiel Roos  <michiel@netcreators.com>
 
