Fixed bug #7610:Error while on the extra step
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@34407 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-13  Michiel Roos  <michiel@netcreators.com>
+
+	* Fixed bug #7610: Error while on the extra step (accidentally committed earlier)
+
 2010-06-15  Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Fixed bug #8197: Password of fe_users is not updated anymore
