A message now is displayed after submitting the form in step 3 telling the user the installation of the package is in progress. Resolves #8296
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@34464 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,11 @@
+2010-06-17  Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Feature #8296: A message is displayed telling the user that the installation is in progress.
+
+2010-06-16  Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Removed DELAYED from INSERT statements
+
 2010-06-13  Michiel Roos  <michiel@netcreators.com>
 
 	* Fixed bug #7610: Error while on the extra step (accidentally committed earlier)
