--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,8 @@
+2010-06-20  Peter Beernink  <p.beernink@drecomm.nl>
+
+	* Fixed bug #7944: Removed the use of mysql_real_escape_string in favour of fullQuoteStr()
+	  and don't change character set when DBAL is loaded.
+
 2010-06-17  Peter Beernink  <p.beernink@drecomm.nl>
 
 	* Feature #8296: A message is displayed telling the user that the installation is in progress.
