Added an id parameter to the felogin login-form form tag
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@34681 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,6 +1,7 @@
 2010-06-21  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed the indexedsearch HTML template, missing some id parameters
+	* Added an id parameter to the felogin login-form form tag
 
 2010-06-20  Peter Beernink  <p.beernink@drecomm.nl>
 
