Fixed the felogin login-form, the submit button was named "submit", so that the submit() method of the form could not be called
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@34683 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Fixed the indexedsearch HTML template, missing some id parameters
 	* Added an id parameter to the felogin login-form form tag
+	* Fixed the felogin login-form, the submit button was named "submit", so that the submit() method of the form could not be called
 
 2010-06-20  Peter Beernink  <p.beernink@drecomm.nl>
 
