Added type="submit" to the buttons in order to make them work in Internet Explorer 7. Fixes #8599
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@36090 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-27  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #8599: 1-2-3 installer not working in Internet Explorer 7
+
 2010-06-21  Ingo Renner  <ingo@typo3.org>
 
 	* Fixed the indexedsearch HTML template, missing some id parameters
