Added wt_spamshield extension for spam prevention. Resolves #8775.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@36093 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Fixed bug #8599: 1-2-3 installer not working in Internet Explorer 7
 	* Resolved issue #8775: Unit tests hould not be in package
+	* Resolved issue #8399: Added the wt_spamshield extension for spam prevention of the contact form
 
 2010-06-21  Ingo Renner  <ingo@typo3.org>
 
