--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-07-29  Ben van 't Ende <ben@typo3.org>
+
+	* Fixed bug #9076: Added news and news categories to Tables (modify) to Backend usergroup "Advanced editors". Also removed Alternative Page Language and Internal Note form Tables (listing) as these were already listed in Tables (modify).
+
 2010-07-27  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #8599: 1-2-3 installer not working in Internet Explorer 7
