--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,5 +1,6 @@
 2010-07-30  Ben van 't Ende <ben@typo3.org>
 
+	* Fixed bug #9097: Changed Powered by in footer to "TYPO3 Enterprise Open Source CMS (Version 4.4.2)" for SEO reasons. Linked "TYPO3 Enterprise Open Source CMS" to typo3.org.
 	* Fixed bug #8501: Added "plugin.tx_indexedsearch.search.exactCount = 1" to template TypoScript Templates/extension_configuration/plugin.indexed_search
 	* Fixed bug #9016: Changed "int+" to "string" in Template "ROOT" on page "TypoScript Templates" for menu.top.pages and plugin.tt_news.pid_list
 
