--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-06-02  Ben van 't Ende <ben@typo3.org>
+
+	* Fixed bug #9097: Changed title attribute on link from 'title="TYPO3 Open Source ECMS"' to 'title="TYPO3 Open Source CMS"'
+
 2010-07-30  Ben van 't Ende <ben@typo3.org>
 
 	* Fixed bug #9097: Changed Powered by in footer to "TYPO3 Enterprise Open Source CMS (Version 4.4.2)" for SEO reasons. Linked "TYPO3 Enterprise Open Source CMS" to typo3.org.
