Fixed bug #9439: Checked for the TYPO3 version to determine the EM location
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@38279 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-17  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #9439: Checked for the TYPO3 version to determine the EM location
+
 2010-06-02  Ben van 't Ende <ben@typo3.org>
 
 	* Fixed bug #9097: Changed title attribute on link from 'title="TYPO3 Open Source ECMS"' to 'title="TYPO3 Open Source CMS"'
