Fixed bug which caused the introduction package to generate a blank page on some installations.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@38797 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-09-30  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug which caused the introduction package to generate a blank page on some installations.
+ 
 2010-09-17  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #9439: Checked for the TYPO3 version to determine the EM location
