Removed doc/wizard_from.* files. Resolves #10140
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@39131 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-10-14  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Removed doc/wizard_from.* files. Resolves #10140
+
 2010-09-30  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug which caused the introduction package to generate a blank page on some installations.
