Fixed bug #10356: Added a new SQL file with the lightbox configuration and sample sys_news records Resolved issue #9699: Added the jquerycolorbox extension
These features require TYPO3 4.5a3 or newer.


git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@39437 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,8 @@
+2010-10-22  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #10356: Added a new SQL file with the lightbox configuration and sample sys_news records
+	* Resolved issue #9699: Added the jquerycolorbox extension
+
 2010-10-14  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Removed doc/wizard_from.* files. Resolves #10140
