--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-11-04  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #10610: An error message will be displayed when the required directories are not writable.
+
 2010-10-14  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Removed doc/wizard_from.* files. Resolves #10140
