--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,6 +1,7 @@
 2010-11-04  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #10610: An error message will be displayed when the required directories are not writable.
+	* Fixed bug #9079: The alignment of the radio buttons has been fixed.
 
 2010-10-22  Peter Beernink <p.beernink@drecomm.nl>
 
