--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2010-12-21  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #11405: Configured the 404 page in localconf.php. Thanks to Christian Boltz
+
 2010-11-04  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #10610: An error message will be displayed when the required directories are not writable.
