Fixed PHP errors in the sys_log table due to missing argument in TYPO3_DB->quoteStr
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/branches/IP_TYPO3_4-4@41411 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,5 +1,6 @@
 2010-12-21  Peter Beernink <p.beernink@drecomm.nl>
 
+	* Fixed PHP errors in the sys_log table due to missing argument in TYPO3_DB->quoteStr
 	* Fixed bug #11405: Configured the 404 page in localconf.php. Thanks to Christian Boltz
 
 2010-11-04  Peter Beernink <p.beernink@drecomm.nl>
