Removed fieldset and legend from the login form. Fixes #9078
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/branches/IP_TYPO3_4-4@41450 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,5 +1,6 @@
 2010-12-23  Peter Beernink <p.beernink@drecomm.nl>
 
+	* Fixed bug #9078: Removed fieldset and legend from the login form.
 	* Image placement in the RTE is not supported. Added RTE configuration.
 
 2010-12-22  Peter Beernink <p.beernink@drecomm.nl>
