Fixed bug #11770: After copying all files, fix permissions.
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@41863 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,5 +1,6 @@
 2011-01-07  Peter Beernink <p.beernink@drecomm.nl>
 
+	* Fixed bug #11770: After copying all files, fix permissions.
 	* Fixed bug #11764: Removed double slashes which caused an error in some browsers.
 	* Fixed bug #11919: Changed the author of the package
 	* Fixed bug #9826: User tools module added to the demo users. Thanks to Ben van 't Ende
