Fixed bug #30063: Install Tool Step 4 - wrong rendering (Thanks to Thorsten Kahler)
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@42458 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2011-01-21  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #30063: Install Tool Step 4 - wrong rendering (Thanks to Thorsten Kahler)
+
 2011-01-14  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #11780: Place recheck button when directories are not writable.
