--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2011-02-04  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #12639: Added additional } in sys_template 'menu.breadcrumb' (Thanks to Ernesto Baschny)
+
 2011-01-21  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #30063: Install Tool Step 4 - wrong rendering (Thanks to Thorsten Kahler)
