Fixed bug #12473: Updated the RealURL and wt_spamshield extensions. Updated the database accordingly
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@43090 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -2,6 +2,7 @@
 
 	* Fixed bug #12639: Added additional } in sys_template 'menu.breadcrumb' (Thanks to Ernesto Baschny)
 	* Fixed bug #12459: Updated database for TYPO 4.5.0
+	* Fixed bug #12473: Updated the RealURL and wt_spamshield extensions. Updated the database accordingly
 
 2011-01-21  Peter Beernink <p.beernink@drecomm.nl>
 
