Fixed bug #13271: Added exclude fields for normal users
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/trunk@44613 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2011-03-04  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #13271: Added exclude fields for normal users
+
 2011-02-04  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #12639: Added additional } in sys_template 'menu.breadcrumb' (Thanks to Ernesto Baschny)
