Register needed extensions. Thanks to Ernesto Baschny. Fixes #26999
git-svn-id: https://svn.typo3.org/TYPO3v4/Extensions/introduction/branches/IP_TYPO3_4-5@48285 735d13b6-9817-0410-8766-e36946ffe9aa

--- a/introduction/ChangeLog
+++ b/introduction/ChangeLog
@@ -1,3 +1,7 @@
+2011-05-31  Peter Beernink <p.beernink@drecomm.nl>
+
+	* Fixed bug #26999: Register needed extensions. Thanks to Ernesto Baschny
+
 2011-03-04  Peter Beernink <p.beernink@drecomm.nl>
 
 	* Fixed bug #13271: Added exclude fields for normal users
